<resources>
    <string name="app_name">HW1</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
    <string name="username">用户名:</string>
    <string name="inputname">请输入用户名</string>
    <string name="password">&#160;&#160;&#160;&#160;密码:</string>
    <string name="inputpw">请输入密码</string>
    <string name="student">学生</string>
    <string name="teacher">老师</string>
    <string name="association">社团</string>
    <string name="manager">管理者</string>
    <string name="login">登陆</string>
    <string name="regist">注册</string>
</resources>
